--- a/app/src/main/res/layout/activity_maps.xml
+++ b/app/src/main/res/layout/activity_maps.xml
@@ -17,4 +17,15 @@
         app:layout_constraintStart_toStartOf="parent"
         tools:context=".MapsActivity" />
 
+    <FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
+        android:layout_width="match_parent"
+        android:layout_height="match_parent"
+        android:layout_centerInParent="true"
+        android:layout_margin="64dp"
+
+        android:id="@+id/fragment_container"
+        >
+
+    </FrameLayout>
+
 </androidx.constraintlayout.widget.ConstraintLayout>
