--- a/app/src/main/res/layout/fragment_layout_file_screen_2.xml
+++ b/app/src/main/res/layout/fragment_layout_file_screen_2.xml
@@ -1,27 +1,28 @@
 <?xml version="1.0" encoding="utf-8"?>
-<androidx.constraintlayout.widget.ConstraintLayout
-    xmlns:android="http://schemas.android.com/apk/res/android"
+<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:app="http://schemas.android.com/apk/res-auto"
     xmlns:tools="http://schemas.android.com/tools"
-    android:layout_margin="64dp"
-    android:padding="8dp"
     android:layout_width="match_parent"
-    android:layout_height="match_parent">
+    android:layout_height="match_parent"
+    android:background="#18364C"
+    android:padding="8dp">
 
     <TextView
         android:id="@+id/textView5"
+        android:textColor="@android:color/white"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:layout_marginTop="16dp"
         android:gravity="center"
-        android:text="Enter email as given below in Nino App, Make sure to enter the details as is"
+        android:text="Enter the code as given below in Nino App, Make sure to enter the details as is"
         android:textSize="24sp"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toTopOf="parent" />
 
 
     <TextView
-        android:id="@+id/input_email_id"
+        android:id="@+id/input_code"
+        android:textColor="@android:color/white"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:layout_marginTop="24dp"
@@ -33,21 +34,23 @@
         app:layout_constraintTop_toBottomOf="@+id/textView5"
         tools:text="abcd.efgh@gmail.com" />
 
+
     <TextView
+        android:textColor="@android:color/white"
         android:id="@+id/textView7"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:layout_marginTop="64dp"
+        android:layout_marginTop="104dp"
         android:gravity="center"
         android:text="Enter Child Number as given below in Nino App, Again Make sure to enter the details as is"
         android:textSize="24sp"
-        app:layout_constraintEnd_toEndOf="@+id/textView5"
-        app:layout_constraintHorizontal_bias="0.0"
-        app:layout_constraintStart_toStartOf="@+id/textView5"
-        app:layout_constraintTop_toBottomOf="@+id/input_email_id" />
-
+        app:layout_constraintEnd_toEndOf="@+id/input_code"
+        app:layout_constraintHorizontal_bias="0.49"
+        app:layout_constraintStart_toStartOf="@+id/input_code"
+        app:layout_constraintTop_toBottomOf="@+id/input_code" />
 
     <TextView
+        android:textColor="@android:color/white"
         android:id="@+id/input_child_number"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
@@ -60,6 +63,7 @@
         tools:text="1" />
 
     <TextView
+        android:textColor="@android:color/white"
         android:id="@+id/textView9"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
