--- a/app/src/main/res/layout/fragment_layout_file.xml
+++ b/app/src/main/res/layout/fragment_layout_file.xml
@@ -1,9 +1,14 @@
 <?xml version="1.0" encoding="utf-8"?>
 
+
+
+
 <ScrollView
     xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:app="http://schemas.android.com/apk/res-auto"
     xmlns:tools="http://schemas.android.com/tools"
+
+
     android:layout_width="match_parent"
     android:layout_height="match_parent"
     android:background="#18364C"
@@ -25,6 +30,10 @@
             android:layout_marginTop="40dp"
             android:gravity="center"
             android:text="Download secondary App Nino on Child's phone"
+            xmlns:android="http://schemas.android.com/apk/res/android"
+            xmlns:app="http://schemas.android.com/apk/res-auto"
+            xmlns:tools="http://schemas.android.com/tools"
+
             android:textColor="@android:color/white"
             android:textSize="24sp"
             app:layout_constraintEnd_toEndOf="parent"
@@ -39,6 +48,10 @@
             android:layout_marginTop="52dp"
             android:gravity="center"
             android:text="To download, Search Nino app on Play store"
+            xmlns:android="http://schemas.android.com/apk/res/android"
+            xmlns:app="http://schemas.android.com/apk/res-auto"
+            xmlns:tools="http://schemas.android.com/tools"
+
             android:textColor="@android:color/white"
             android:textSize="24sp"
             app:layout_constraintEnd_toEndOf="@+id/textView2"
@@ -53,6 +66,10 @@
             android:layout_marginTop="44dp"
             android:gravity="center"
             android:text="Note - Make sure Location is always turned on in child's phone"
+            xmlns:android="http://schemas.android.com/apk/res/android"
+            xmlns:app="http://schemas.android.com/apk/res-auto"
+            xmlns:tools="http://schemas.android.com/tools"
+
             android:textColor="@android:color/white"
             android:textSize="24sp"
             app:layout_constraintEnd_toEndOf="@+id/textView3"
@@ -67,6 +84,11 @@
             android:layout_marginTop="140dp"
             android:gravity="center"
             android:text="After downloading the app, Click Next to continue"
+            xmlns:android="http://schemas.android.com/apk/res/android"
+            xmlns:app="http://schemas.android.com/apk/res-auto"
+            xmlns:tools="http://schemas.android.com/tools"
+
+
             android:textColor="@android:color/white"
             android:textSize="24sp"
             app:layout_constraintEnd_toEndOf="@+id/textView3"
