--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -28,15 +28,18 @@
 
     <TextView
         android:id="@+id/textView"
-        android:layout_width="247dp"
+        android:layout_width="0dp"
         android:layout_height="wrap_content"
-        android:layout_marginTop="196dp"
-        android:gravity="center"
-        android:text="Welcome to Track my Family"
+        android:layout_marginLeft="32dp"
+        android:layout_marginTop="188dp"
+        android:layout_marginRight="32dp"
 
-        xmlns:android="http://schemas.android.com/apk/res/android"
-        xmlns:app="http://schemas.android.com/apk/res-auto"
-        xmlns:tools="http://schemas.android.com/tools"
+        android:ellipsize="none"
+        android:gravity="center"
+        android:maxLines="100"
+
+        android:scrollHorizontally="false"
+        android:text="Welcome to Track my Family"
 
         android:textColor="@android:color/white"
         android:textSize="48sp"
@@ -46,20 +49,21 @@
 
     <Button
         android:id="@+id/sign_in_btn"
-        android:layout_width="wrap_content"
-        android:layout_height="80dp"
-        android:layout_marginTop="40dp"
-        android:background="#fff"
+        android:layout_width="0dp"
+        android:layout_height="wrap_content"
+        android:layout_marginLeft="32dp"
+        android:layout_marginTop="108dp"
+        android:layout_marginRight="32dp"
+        android:background="#ffffff"
         android:drawableStart="@drawable/fui_ic_googleg_color_24dp"
         android:drawableLeft="@drawable/fui_ic_googleg_color_24dp"
         android:drawablePadding="10dp"
-        android:paddingStart="40dp"
-        android:paddingEnd="40dp"
+        android:paddingStart="20dp"
+        android:paddingEnd="20dp"
         android:text="Sign in with Google"
         android:textAllCaps="false"
         android:textSize="16sp"
         app:layout_constraintEnd_toEndOf="@+id/textView"
-        app:layout_constraintHorizontal_bias="0.0"
         app:layout_constraintStart_toStartOf="@+id/textView"
         app:layout_constraintTop_toBottomOf="@+id/textView" />
 
