--- a/app/src/main/res/values/ic_icon_background.xml
+++ b/app/src/main/res/values/ic_icon_background.xml
@@ -1,4 +1,4 @@
 <?xml version="1.0" encoding="utf-8"?>
 <resources>
-    <color name="bdvbxvcbvcb">#FFFFFF</color>
+    <color name="ic_icon_background">#FFFFFF</color>
 </resources>
